--- a/src/main/resources/view/TaskBox.fxml
+++ b/src/main/resources/view/TaskBox.fxml
@@ -2,15 +2,63 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<fx:root alignment="TOP_RIGHT" maxWidth="1.7976931348623157E308" prefWidth="400.0" spacing="5.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxWidth="1.7976931348623157E308" prefWidth="400.0" spacing="5.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="messageLabel" text="Label" maxHeight="Infinity" />
-        <ImageView fx:id="profilePictureView" fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true" />
+        <Label fx:id="taskNumber" alignment="TOP_LEFT" maxHeight="Infinity" prefHeight="52.0" prefWidth="20.0" text="Task Number" />
+      <VBox prefHeight="49.0" prefWidth="325.0" spacing="3.0">
+         <children>
+            <Label fx:id="taskDescription" alignment="TOP_LEFT" maxHeight="Infinity" text="Task Description" wrapText="true">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <FlowPane fx:id="taskInfoContainer">
+               <children>
+                  <Label fx:id="taskType" alignment="TOP_LEFT" maxHeight="Infinity" style="-fx-background-color: #D3D3D3; -fx-background-radius: 10;" text="Task Type" textAlignment="CENTER">
+                     <padding>
+                        <Insets bottom="4.0" left="7.5" right="7.5" top="4.0" />
+                     </padding>
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" right="5.0" />
+                     </FlowPane.margin>
+                  </Label>
+                  <Label fx:id="taskStatus" alignment="TOP_LEFT" maxHeight="Infinity" style="-fx-background-color: #00FF00; -fx-background-radius: 10;" text="Task Status" textAlignment="CENTER">
+                     <padding>
+                        <Insets bottom="4.0" left="7.5" right="7.5" top="4.0" />
+                     </padding>
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" right="5.0" />
+                     </FlowPane.margin>
+                  </Label>
+                  <Label fx:id="taskInfo1" alignment="TOP_LEFT" maxHeight="Infinity" style="-fx-background-radius: 10; -fx-background-color: FFA500;" textAlignment="CENTER" visible="false">
+                     <padding>
+                        <Insets bottom="4.0" left="7.5" right="7.5" top="4.0" />
+                     </padding>
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" right="5.0" />
+                     </FlowPane.margin>
+                  </Label>
+                  <Label fx:id="taskInfo2" alignment="TOP_LEFT" maxHeight="Infinity" style="-fx-background-radius: 10; -fx-background-color: #AB784E;" visible="false">
+                     <padding>
+                        <Insets bottom="4.0" left="7.5" right="7.5" top="4.0" />
+                     </padding>
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" />
+                     </FlowPane.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets right="5.0" />
+               </VBox.margin>
+            </FlowPane>
+         </children>
+      </VBox>
     </children>
     <padding>
-        <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
 </fx:root>
