--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -7,7 +7,7 @@
 
 <fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" minHeight="-Infinity" minWidth="-Infinity" text="Label" wrapText="true">
+        <Label fx:id="dialog" maxWidth="300.0" minHeight="-Infinity" text="Label" wrapText="true">
          <HBox.margin>
             <Insets right="8.0" />
          </HBox.margin></Label>
