Fix enter to send

--- a/src/main/resources/graphic/MainWindow.fxml
+++ b/src/main/resources/graphic/MainWindow.fxml
@@ -20,7 +20,7 @@
       </ScrollPane>
       <HBox alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
          <children>
-            <SuggestionTextField fx:id="inputField" maxWidth="1.7976931348623157E308" onAction="#handleSend" promptText="Message" HBox.hgrow="ALWAYS" />
+            <SuggestionTextField fx:id="inputField" maxWidth="1.7976931348623157E308" onKeyReleased="#handleKeyRelease" promptText="Message" HBox.hgrow="ALWAYS" />
             <Button mnemonicParsing="false" onAction="#handleSend" text="Send" />
          </children>
       </HBox>
