--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" style="-fx-background-color: #202020;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.MainWindow">
     <children>
-        <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="40.0" prefWidth="324.0" style="-fx-background-color: #202020; -fx-text-fill: white;" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" />
+        <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="40.0" prefWidth="324.0" promptText="Your command here..." style="-fx-background-color: #202020; -fx-text-fill: white;" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" />
         <Button fx:id="sendButton" layoutX="324.0" layoutY="558.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="40.0" prefWidth="76.0" style="-fx-background-color: #202020; -fx-border-color: #2a8eff; -fx-border-radius: 10px;" text="Send" textFill="#2a8eff" AnchorPane.rightAnchor="1.0">
          <opaqueInsets>
             <Insets />
