--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Circle?>
 
-<fx:root alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefWidth="400.0" spacing="10.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefWidth="400.0" spacing="10.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Label fx:id="dialog" alignment="CENTER" contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" prefWidth="274.0" text="Label" wrapText="true" HBox.hgrow="ALWAYS" />
       <Circle fx:id="displayCircle" fill="DODGERBLUE" radius="44.0" stroke="BLACK" strokeType="INSIDE">
          <HBox.margin>
-            <Insets />
+            <Insets right="5.0" />
          </HBox.margin></Circle>
     </children>
     <padding>
