--- a/src/main/resources/view/MessageBox.fxml
+++ b/src/main/resources/view/MessageBox.fxml
@@ -13,7 +13,7 @@
     <padding>
         <Insets bottom="15.0" left="5.0" right="5.0" top="15.0"/>
     </padding>
-    <Label fx:id="messageText" text="Label" wrapText="true">
+    <Label fx:id="messageText" text="Label" wrapText="true" minHeight="-Infinity">
         <padding>
             <Insets left="5.0" right="5.0"/>
         </padding>
