--- a/src/main/resources/view/MessageBox.fxml
+++ b/src/main/resources/view/MessageBox.fxml
@@ -8,15 +8,18 @@
 
 <?import javafx.scene.paint.ImagePattern?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.VBox?>
 <fx:root alignment="TOP_RIGHT" maxHeight="Infinity" maxWidth="Infinity" prefWidth="380.0"
          type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <padding>
         <Insets bottom="15.0" left="5.0" right="5.0" top="15.0"/>
     </padding>
-    <Label fx:id="messageText" text="Label" wrapText="true" minHeight="-Infinity">
-        <padding>
-            <Insets left="5.0" right="5.0"/>
-        </padding>
-    </Label>
+    <VBox fx:id="messageChat" minWidth="100.0">
+        <Label fx:id="messageText" text="Label" wrapText="true" minHeight="-Infinity">
+            <padding>
+                <Insets left="5.0" right="5.0"/>
+            </padding>
+        </Label>
+    </VBox>
     <Circle fx:id="displayPicture" radius="25.0"/>
 </fx:root>
