--- a/src/main/resources/style/styles.css
+++ b/src/main/resources/style/styles.css
@@ -1,14 +1,25 @@
 .button {
-    -fx-background-color: "#63B6D3"
+    -fx-background-color: "#B1E1E5"
 }
 
 .message-box {
 }
 
-.message-chat {
-    -fx-background-color: "#B1E1E5";
+.message-chat-base {
     -fx-background-radius: 10;
     -fx-background-insets: 5;
     -fx-border-insets: 5;
     -fx-padding: 10;
+}
+
+.message-chat-jarvis {
+    -fx-background-color: "#B1E1E5";
+}
+
+.message-chat-ultron {
+    -fx-background-color: "#F4CCCC";
+}
+
+.message-chat-error {
+    -fx-background-color: "#FCE5CD";
 }
