--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -6,15 +6,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="80.0" minWidth="400.0" prefHeight="600.0"
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.HBox?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="400.0" prefHeight="600.0"
             prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="jarvis.ui.layout.MainWindow">
-    <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="560.0" prefWidth="400.0" vvalue="1.0">
-        <VBox fx:id="chatContainer" prefHeight="560.0" prefWidth="380.0"/>
+    <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="540.0" prefWidth="400.0" vvalue="1.0">
+        <VBox fx:id="chatContainer" prefHeight="540.0" prefWidth="380.0"/>
     </ScrollPane>
-    <TextField fx:id="userInput" onAction="#handleUserInput" prefHeight="40.0" prefWidth="320.0"
-               AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1.0"/>
-    <Button fx:id="sendButton" mnemonicParsing="false" onAction="#handleUserInput"
-            prefHeight="40.0" prefWidth="80.0" text="Enter"
-            AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="1.0"/>
+    <HBox prefWidth="400.0" spacing="10.0" AnchorPane.bottomAnchor="1.0">
+        <padding>
+            <Insets top="10.0" bottom="10.0" left="10.0" right="10.0"/>
+        </padding>
+        <TextField fx:id="userInput" onAction="#handleUserInput" prefHeight="40.0" prefWidth="320.0"
+                   promptText="Send a command..."
+                   AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1.0"/>
+        <Button fx:id="sendButton" mnemonicParsing="false" onAction="#handleUserInput"
+                prefHeight="40.0" prefWidth="80.0" text="Enter"
+                AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="1.0"/>
+    </HBox>
 </AnchorPane>
