--- a/src/main/resources/view/CbotBox.fxml
+++ b/src/main/resources/view/CbotBox.fxml
@@ -1,35 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
-
-<!-- @@author axmszr-reused -->
-<!-- Drawn heavily from @hingen's project. Thank you! -->
 
 <fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" style="-fx-background-color: ivory;" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-      <TextFlow>
-         <children>
-            <Text fx:id="dialog" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-               <font>
-                  <Font name="Consolas" size="13" />
-               </font>
-            </Text>
-         </children>
-         <padding>
-            <Insets top="25.0" bottom="15.0" />
-         </padding>
-      </TextFlow>
-    <ImageView fx:id="displayPicture" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-         <HBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </HBox.margin></ImageView>
+    <Label fx:id="dialog" text="Label" minHeight="-Infinity" wrapText="true" style="-fx-font-family: Consolas; -fx-font-size: 13;" />
+    <ImageView fx:id="displayPicture" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"/>
   </children>
   <padding>
-    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+    <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
   </padding>
 </fx:root>
