--- a/src/main/resources/view/Task.fxml
+++ b/src/main/resources/view/Task.fxml
@@ -2,9 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="47.0" prefWidth="680.0" style="-fx-background-color: #FFFFFF;" type="BorderPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
@@ -19,19 +20,56 @@
         </Label>
     </center>
     <right>
-        <Button mnemonicParsing="false" opacity="0.7" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: #352f44; -fx-background-radius: 1em;" text="In Progress" textFill="WHITE" BorderPane.alignment="CENTER_LEFT">
-         <font>
-            <Font size="14.0" />
-         </font></Button>
+      <HBox alignment="CENTER" BorderPane.alignment="CENTER_LEFT">
+         <children>
+            <Button fx:id="taskType" mnemonicParsing="false" opacity="0.7" prefHeight="28.0" style="-fx-background-color: #352f44; -fx-background-radius: 1em;" text="Deadline" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="16.0" right="16.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets right="8.0" />
+               </HBox.margin>
+            </Button>
+              <Button fx:id="timeFrame" mnemonicParsing="false" opacity="0.7" prefHeight="28.0" style="-fx-background-color: #352f44; -fx-background-radius: 1em;" text="Time Frame" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <HBox.margin>
+                  <Insets right="8.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets left="16.0" right="16.0" />
+               </padding>
+            </Button>
+            <Button fx:id="isDone" mnemonicParsing="false" opacity="0.7" prefHeight="28.0" prefWidth="101.0" style="-fx-background-color: #352f44; -fx-background-radius: 1em;" text="In Progress" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="16.0" right="16.0" />
+               </padding>
+            </Button>
+         </children>
+      </HBox>
     </right>
     <padding>
         <Insets left="10.0" right="10.0" />
     </padding>
    <left>
-      <CheckBox mnemonicParsing="false" stylesheets="@../values/checkbox.css" BorderPane.alignment="CENTER">
+      <Pane prefHeight="20.0" prefWidth="20.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="index" alignment="CENTER" layoutY="2.0" prefHeight="20.0" prefWidth="20.0" style="-fx-background-color: #352f44; -fx-background-radius: 1em;" text="0" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+         </children>
          <BorderPane.margin>
-            <Insets left="4.0" right="2.0" />
+            <Insets bottom="12.0" left="4.0" top="12.0" />
          </BorderPane.margin>
-      </CheckBox>
+      </Pane>
    </left>
 </fx:root>
