--- a/src/main/resources/view/Home.fxml
+++ b/src/main/resources/view/Home.fxml
@@ -30,7 +30,7 @@
                            <font>
                               <Font size="14.0" />
                            </font></Label>
-                        <Line endX="391.0" layoutX="276.0" layoutY="126.0" startX="-250.0" />
+                        <Line endX="417.0" endY="-1.0" layoutX="276.0" layoutY="126.0" startX="-276.0" startY="-1.0" />
                             </children>
                         </Pane>
                     </top>
