--- a/src/main/resources/view/HelpWindow.fxml
+++ b/src/main/resources/view/HelpWindow.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.gui.HelpWindow">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="colette.gui.HelpWindow">
     <children>
         <StackPane prefWidth="250.0" maxWidth="250.0" maxHeight="Infinity">
             <Text fx:id="helpText" text="label" textAlignment="center" style="-fx-font-family: Lucida Grande; -fx-font-size: 20;"/>
