--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -7,16 +7,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" style="-fx-background-color: white;" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <TextField fx:id="userInput" layoutX="4.0" layoutY="558.0" onAction="#handleUserInput" prefHeight="29.0" prefWidth="332.0" AnchorPane.bottomAnchor="7.0" />
-        <Button fx:id="sendButton" layoutX="341.0" layoutY="564.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="29.0" prefWidth="56.0" text="Send">
+        <TextField fx:id="userInput" layoutX="8.0" layoutY="556.0" onAction="#handleUserInput" prefHeight="30.0" prefWidth="326.0" AnchorPane.bottomAnchor="10.0" />
+        <Button fx:id="sendButton" layoutX="340.0" layoutY="560.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="30.0" prefWidth="57.0" text="Send">
          <font>
             <Font name="Calibri Bold" size="12.0" />
-         </font></Button>
+         </font>
+      </Button>
         <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0">
             <content>
-                <VBox fx:id="dialogContainer" prefHeight="552.0" prefWidth="388.0" />
+                <VBox fx:id="dialogContainer" prefHeight="552.0" prefWidth="388.0" style="-fx-background-color: e0cfb1;" />
             </content>
         </ScrollPane>
     </children>
