Style: style schedule

--- a/src/main/resources/graphic/style.css
+++ b/src/main/resources/graphic/style.css
@@ -84,7 +84,6 @@
 
 .scroll-bar .thumb {
     -fx-background-color : rgb(188, 165, 192);
-    -fx-background-insets : 2.0, 0.0, 0.0, 0.0;
     -fx-background-radius : 5.0;
 }
 
@@ -111,4 +110,12 @@
 .speech-bubble .speech-bubble-pointer-right {
     -fx-background-color: -bubble-fill-color;
     -fx-shape: "M 0 0 L 0 100 L 90 100 C 105 100 105 85 90 80 S 0 50 0 0 Z"
+}
+
+
+.schedule-box {
+    -fx-color: rgb(187, 213, 212);
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius : 3, 3, 2, 1;
 }
