Schedule: edit style to be round

--- a/src/main/resources/graphic/style.css
+++ b/src/main/resources/graphic/style.css
@@ -113,9 +113,13 @@
 }
 
 
+.schedule-date-box {
+    -fx-border-color : black;
+}
+
 .schedule-box {
     -fx-color: rgb(187, 213, 212);
     -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
-    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
-    -fx-background-radius : 3, 3, 2, 1;
+    -fx-background-insets: 1 1 0 1, 1, 2, 3;
+    -fx-background-radius : 10, 10, 9, 8;
 }
