Add javaFX for Duke task bot

--- a/src/main/java/resources/view/DialogBox.fxml
+++ b/src/main/java/resources/view/DialogBox.fxml
@@ -6,16 +6,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Circle?>
 
-<fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-  <padding>
-    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-  </padding>
+<fx:root alignment="TOP_RIGHT" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="86.0"
+         prefWidth="480.0" type="HBox" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" >
   <Label fx:id="dialog" text="Label" wrapText="true" />
   <padding>
     <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
   </padding>
-  <Circle fx:id="icon" radius="25.0"/>
-  <padding>
-    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-  </padding>
+  <Circle fx:id="icon" radius="20.0"/>
 </fx:root>
