Make GUI Adjustments
Improve the Duke GUI by:
* Add an icon to the application;
* Add background colour to the scroll pane and dialog box;
* Change the icon for Duke and user:
* Add username for user;
* Adjust size of the scroll bar.

--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -20,6 +20,7 @@
             <Insets top="5.0" />
          </padding></Label>
         <ImageView fx:id="displayPicture" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+        <Label fx:id="username" text="Name"/>
     </children>
     <padding>
         <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
