--- a/src/main/resources/graphic/style.css
+++ b/src/main/resources/graphic/style.css
@@ -153,3 +153,17 @@
 .deadline-box:incomplete {
     -fx-color: rgb(216, 199, 171);
 }
+
+.todo-label {
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
+    -fx-background-insets: 1 1 0 1, 1, 2, 3;
+    -fx-background-radius : 10, 10, 9, 8;
+}
+
+.todo-label:complete {
+    -fx-color: rgb(173, 216, 171);
+}
+
+.todo-label:incomplete {
+    -fx-color: rgb(189, 169, 212);
+}
