Change names of files from Duke to Boo

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="duke.MainWindow">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boo.MainWindow">
     <children>
         <TextField fx:id="userInput" layoutX="8.0" layoutY="563.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="682.0" AnchorPane.bottomAnchor="8.0" />
         <Button fx:id="sendButton" layoutX="706.0" layoutY="550.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="80.0" text="Send">
