Update JavaFX GUI

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -11,11 +11,11 @@
     <children>
         <TextField fx:id="userInput" layoutY="558.0" onAction="#processUserInput" prefHeight="41.0" prefWidth="324.0" AnchorPane.bottomAnchor="1.0">
          <font>
-            <Font name="KaiTi" size="18.0" />
+            <Font name="Berlin Sans FB" size="16.0" />
          </font></TextField>
         <Button fx:id="sendButton" layoutX="324.0" layoutY="558.0" mnemonicParsing="false" onAction="#processUserInput" prefHeight="41.0" prefWidth="76.0" text="Enter">
          <font>
-            <Font name="KaiTi" size="17.0" />
+            <Font name="Berlin Sans FB" size="18.0" />
          </font></Button>
         <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0">
             <content>
