--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -8,11 +8,17 @@
 
 <fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" text="Label" textAlignment="RIGHT" textFill="#b16262" textOverrun="CLIP" wrapText="true">
+        <Label fx:id="dialog" minHeight="-Infinity" prefWidth="335.0" style="-fx-border-color: black; -fx-border-radius: 5; -fx-label-padding: 5; -fx-background-color: C9D7F8;" text="Label" textFill="#493657" textOverrun="WORD_ELLIPSIS" wrapText="true">
          <font>
-            <Font name="KaiTi" size="18.0" />
-         </font></Label>
-        <ImageView fx:id="displayPicture" fitHeight="99.0" fitWidth="99.0" opacity="0.69" pickOnBounds="true" preserveRatio="true" />
+            <Font name="Berlin Sans FB" size="16.0" />
+         </font>
+         <HBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </HBox.margin></Label>
+        <ImageView fx:id="displayPicture" fitHeight="85.0" fitWidth="85.0" opacity="0.69" pickOnBounds="true" preserveRatio="true">
+         <HBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </HBox.margin></ImageView>
     </children>
     <padding>
         <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
