Refine personality of Book Modify some responses to commands Fix lack of welcome message

--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -15,6 +15,9 @@
          </font>
          <HBox.margin>
             <Insets />
-         </HBox.margin></Label>
+         </HBox.margin>
+         <padding>
+            <Insets left="5.0" />
+         </padding></Label>
     </children>
 </fx:root>
